# Scheduling-of-malleable-HPC-MPI-applications

./: .gitignore  LICENSE  README.md  config.yml  launcher.sh  pyproject.toml  setup.sh
Data analysis/: FIFO.csv  FIFO_power_off.csv  FIFO_reconfig.csv  Statistical analysis.ipynb  all_false_stats_res.csv  best_config.csv  fifo_reconf_powoff.csv  param_stats_resilience.csv  random_params.csv  random_resilience.csv  stats.csv  swarm_params.csv
Naive greedy alg/: .gitignore  Energy.py  Experiments.py  GA.ipynb  Greedy - Particle swarm.ipynb  Greedy for parameter search.ipynb  Greedy from flow diagram.ipynb  Job.py  Malleable Scheduler - simple with classes.ipynb  Malleable Scheduler 1 - simple.ipynb  Malleable scheduler 2 - simple.ipynb  Power_off.py  Reconfiguration.py  Scheduler.py  Task.py  Visualizer.py  classes.ipynb  refactored_greedy.ipynb
Naive greedy alg/scheduling/: Energy.py  EpochStats.py  Experiments.py  ExperimentsTest.py  Job.py  JobRequest.py  Logging.py  Particle.py  PowerOff.py  Reconfiguration.py  Scheduler.py  Server.py  Swarm.py  Task.py  Visualizer.py  __init__.py  __main__.py
docs/source/: conf.py  index.rst  scheduling.rst
scheduling/: Experiments.py  ExperimentsTest.py  Job.py  JobRequest.py  Logging.py  Particle.py  Scheduler.py  Server.py  Swarm.py  Visualizer.py  __init__.py  __main__.py
